Fix fsize and lspacing on publication card, zmist-278

--- a/src/components/Article/Publications/styles.scss
+++ b/src/components/Article/Publications/styles.scss
@@ -265,6 +265,12 @@
       .meta-author {
         font-weight: 600;
       }
+      .article-title__link {
+        @include media-breakpoint-down(sm) {
+          font-size: 18px;
+          line-height: 1.26;
+        }
+      }
     }
   }
 
